# python-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: python.md
.github/workflows/: ci.yml  publish.yml
tests/: test_client.py
townshipcanada/: __init__.py  cli.py  client.py  exceptions.py  models.py
