[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "townshipcanada"
version = "1.0.1"
description = "Python SDK for the Township Canada API — convert Canadian legal land descriptions (DLS, NTS, Geographic Townships) to GPS coordinates and back."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Maps & Apps Inc.", email = "hello@townshipcanada.com" },
]
keywords = [
    "township",
    "canada",
    "dls",
    "nts",
    "dominion-land-survey",
    "national-topographic-system",
    "gps",
    "coordinates",
    "geocoding",
    "gis",
    "land-survey",
    "legal-land-description",
    "alberta",
    "saskatchewan",
    "manitoba",
    "british-columbia",
    "ontario",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://townshipcanada.com"
Documentation = "https://townshipcanada.com/api"
Repository = "https://github.com/townshipcanada/python-sdk"
Issues = "https://github.com/townshipcanada/python-sdk/issues"

[project.scripts]
township = "townshipcanada.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
